--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for GCI	</title>
-	<atom:link href="http://OFFLINEZIP.wpshocomments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://OFFLINEZIP.wpsho</link>
+	<atom:link href="https://github.com/janakaep/gci/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://github.com/janakaep/gci/</link>
 	<description>Global Consulting Inc.</description>
 	<lastBuildDate>Mon, 01 Jun 2020 20:28:26 +0000</lastBuildDate>
 	<sy:updatePeriod>
